Сетка на гридах для главной страницы. Исправил ошибки, повторно
Заметил  одну незначительную ошибку после отправки, исправил и отправил коммит повторно.

--- a/catalog.html
+++ b/catalog.html
@@ -273,7 +273,7 @@
           </section>
         </div>
         <div class="about-perforators-bar">
-          <section class="about-perforators">
+          <section class="about-perforators container">
             <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
             <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
               Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
