Сетка на флексах для главной страницы. Исправил ошибки

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </div>
       </div>
       <div class="header-shop-description-phone-addres-and-user-section-wrapper container">
-        <p class="header-shop-description">Интернет-магазин строительных материалов и инструментов для ремонта </p>
+        <p class="header-shop-description">Интернет-магазин строительных&nbsp;материалов и&nbsp;инструментов для ремонта</p>
         <div class="header-phone-and-shop-addres-wrapper">
           <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-          <p class="header-shop-address">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+          <p class="header-shop-address">г.Санкт-Петербург, наб.Реки Карповки, 5 лит П</p>
         </div> 
         <section class="unreg-user-section">
           <ul class="unreg-user-section-list">
@@ -88,8 +88,6 @@
             <a href="blank.html">бесплатно</a>
           </article>
           <article class="promo-article-item promo-slider">
-            <!-- Пока не понятно, как вместить содержимое контейнера в нужные размеры
-            ячейки грида, надеюсь это темы следующих уроков. -->
             <section class="promo-slider-section">
               <ul class="promo-slider-list">
                 <li class="promo-slider-item">
@@ -118,8 +116,8 @@
       </section>
       <section class="popular-products container">
         <div class="popular-products-bar">
-          <h2>Популярные товары: </h2>
-          <a class="tipical-red-button" href="blank.html">Все популярные товары: </a>
+          <h2>Популярные товары:</h2>
+          <a class="tipical-red-button tipical-red-button-popular " href="blank.html">Все популярные товары:</a>
         </div> 
         <div class="popular-products-list-wrapper">
           <ul class="popular-products-list">
@@ -187,7 +185,7 @@
       <section class="popular-manufacturers container">
         <div class="popular-manufacturers-bar">
           <h2>Популярные производители:</h2>
-          <a class="tipical-red-button" href="blank.html">Все производители</a>
+          <a class="tipical-red-button tipical-red-button-popular" href="blank.html">Все производители</a>
         </div>
         <div class="popular-manufacturers-list-wrapper">
           <ul class="popular-manufacturers-list">
@@ -239,46 +237,38 @@
           <div class="services-info-wripper">
             <h2>Сервисы</h2>
             <p>
-              Хороший интернет-магазин отличается от плохого не только ценами! <br>
+              Хороший интернет-магазин отличается от плохого не только ценами!
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
             </p>
           </div>
-          <div class="services-button-and-delivery-flex-wrapper">
-            <section class="services-button">
-              <ul class="services-button-list">
-                <li class="services-button-item">
-                  <button  class="current" type="button">Доставка</button>
-                </li>
-                <li class="services-button-item">
-                  <button type="button">Гарантия</button>
-                </li>
-                <li class="services-button-item">
-                  <button type="button">Кредит</button>
-                </li>
-              </ul>
-            </section>
-            <div class="services-delivery-wripper">
-              <ul>
-                <li>
-                  <h3>Доставка</h3>
-                  <!-- ? Ты говорила мне не использовать теги BR для разрыва строк в 
-                       ? этом месте. Как  тогда тут сверстать текст, чтобы были правильные
-                       ? переносы как в макете? Я пока могу только предположить
-                       ? что мне нужно создать DIV c размерами по тексту, как в макете и отцентрировать
-                       ? его относительно контейнера, или есть другие варианты, которые
-                       ? будут рассматриваться дальше в уроках?  -->
-                  <p>
-                    Мы с удовольствием доставим ваш товар прямо
-                    к вашему подъезду совершенно бесплатно!
-                    Ведь мы неплохо заработаем, 
-                    поднимая его на ваш этаж!
-                  </p>
-                  <!-- Временно уменьшил картинку, чтобы помещалась в блок, оригинальный код закомитил -->
-                  <!-- <img src="img/delivery-car.png" width="468" height="261" alt="Логотип машины доставки"> -->
-                  <img src="img/delivery-car.png" width="234" height="130" alt="Логотип машины доставки">
-                </li>
-              </ul>
-            </div>
+          <section class="services-button">
+            <ul class="services-button-list">
+              <li class="services-button-item">
+                <button  class="current" type="button">Доставка</button>
+              </li>
+              <li class="services-button-item">
+                <button type="button">Гарантия</button>
+              </li>
+              <li class="services-button-item">
+                <button type="button">Кредит</button>
+              </li>
+            </ul>
+          </section>
+          <div class="services-delivery-wripper">
+            <ul>
+              <li>
+                <h3>Доставка</h3>
+                <p>
+                  Мы с удовольствием доставим ваш товар прямо
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь&nbsp;мы неплохо заработаем,<br>
+                  поднимая его на ваш этаж!
+                </p>
+                <!-- Временно уменьшил картинку, чтобы помещалась в блок, оригинальный код закомитил -->
+                <!-- <img src="img/delivery-car.png" width="468" height="261" alt="Логотип машины доставки"> -->
+                <img src="img/delivery-car.png" width="234" height="130" alt="Логотип машины доставки">
+              </li>
+            </ul>
           </div>  
         </section>
       </div>
@@ -286,11 +276,11 @@
         <section class="about-us">
           <h2 class="visually-hidden">О нас</h2>
           <p class="about-us-company-name">Компания «Техномарт»</p>
-          <p class="about-us-info  first-paragraph">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          <p class="about-us-info about-us-info-shopping">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
             ремонта и строительства не оставит равнодушными любителей сэкономить на 
             гастарбайтерах. 
           </p>
-          <p class="about-us-info second-paragraph">Мы можем доставить ваш товар в самые отдаленные точки России!
+          <p class="about-us-info about-us-info-delivery">Мы можем доставить ваш товар в самые отдаленные точки России!
             Техномарт работает со многими транспортными компаниями:
           </p>
           <ul class="about-us-list">
@@ -309,10 +299,10 @@
         <section class="contacts">
           <h2 class="visually-hidden">Мы на карте города</h2>
           <p class="contacts-header">Контакты</p>
-          <p class="contacts-info first-paragraph">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
           <!-- Здесь будет карта -->
           <a href="blank.html">
-            <img src="img/map.png" width="300" height="158" alt="схематическая карта проезда">
+            <img class="map-img" src="img/map.png" width="300" height="158" alt="схематическая карта проезда">
           </a>
           <a class="tipical-red-button" href="blank.html">Заблудились? Напишите нам!</a>
         </section>
@@ -360,7 +350,7 @@
           </div>
           <section class="footer-contacts">
             <h2 class="visually-hidden">Наши контакты</h2>
-            <p class="footer-contacts-description">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
+            <p class="footer-contacts-description">г.Санкт-Петербург, наб.Реки Карповки, 5 лит П</p> 
             <a  class="footer-contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
           </section>
         </section>
@@ -402,13 +392,10 @@
     <!-- Форма обратной  связи -->
   
     <form class="popup-feedback" action="https://echo.htmlacademy.ru" method="post">
-      <div class="popup-feedback-top-bar"></div>
-      <div class="popup-feedback-container">
-        <label class="popup-feedback-description-text">Ваше имя:<input type="text" name="user-name" placeholder="Имя Фамилия"></label>
-        <label class="popup-feedback-description-email">Ваш e-mail:<input type="email" name="user-email" placeholder="email@example.com"></label>
-        <label class="popup-feedback-description">Текст письма:<textarea name="user-comment">В свободной форме</textarea></label>
-      </div>
-      <div class="popup-feedback-bottom-bar"> 
+      <label class="popup-feedback-description-text">Ваше имя:<input type="text" name="user-name" placeholder="Имя Фамилия"></label>
+      <label class="popup-feedback-description-email">Ваш e-mail:<input type="email" name="user-email" placeholder="email@example.com"></label>
+      <label class="popup-feedback-description">Текст письма:<textarea name="user-comment">В свободной форме</textarea></label>
+      <div class="popup-feedback-bottom-bar">
         <button class="tipical-red-button tipical-red-button-popup" type="submit">Отправить</button>
       </div>
       <button class="popup-close visually-hidden" type="button" ></button>
